# autocompleter

./: .gitignore  README.md  autocompleter.service  cache.py  install.sh  main.py  nominatim_client.py  pyproject.toml  rate_limiter.py  scoring_model.py  uninstall.sh
static/: index.html
